--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background: #080808;
+    background: #100720;
     color: #fff;
 }
 
@@ -283,11 +283,26 @@ nav ul li a:hover::after {
     border-radius: 6px;
     text-decoration: none;
     color: #fff;
-    transition: background 0.5s;
+    position: relative;
+    background: #100720;
+    transition: background 0.1s;
 }
 
-.btn:hover {
-    background: #ff004f;
+.btn::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+    filter: blur(15px);
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.btn::active {
+    transform: scale(0.9) rotate(5deg);
+    background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+    transition: 0.5s;
 }
 
 /* Contact */
